Add google fonts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pocketmint</title>
   </head>
-  <body>
+  <body class="font-dm-sans">
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
